// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableHeadCell should render correctly 1`] = `
<th
  className="bpk-table__cell bpk-table__cell--head"
>
  Heading
</th>
`;

exports[`BpkTableHeadCell should render correctly with "alternate" 1`] = `
<th
  className="bpk-table__cell bpk-table__cell--head-alternate"
>
  <th />
</th>
`;

exports[`BpkTableHeadCell should render correctly with arbitrary props 1`] = `
<th
  className="bpk-table__cell bpk-table__cell--head"
  data-foo="bar"
  id="my-custom-id"
>
  <th />
</th>
`;

exports[`BpkTableHeadCell should render correctly with custom class 1`] = `
<th
  className="bpk-table__cell bpk-table__cell--head my-custom-class"
>
  <th />
</th>
`;
